@@ -7,7 +7,6 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.junit.jupiter.api.Test;
 
@@ -22,9 +21,9 @@ import de.tum.cit.aet.artemis.programming.service.localci.scaparser.exception.Un
  */
 class StaticCodeAnalysisParserUnitTest {
 
-    private static final Path EXPECTED_FOLDER_PATH = Paths.get("src", "test", "resources", "test-data", "static-code-analysis", "expected");
+    private static final Path EXPECTED_FOLDER_PATH = Path.of("src", "test", "resources", "test-data", "static-code-analysis", "expected");
 
-    private static final Path REPORTS_FOLDER_PATH = Paths.get("src", "test", "resources", "test-data", "static-code-analysis", "reports");
+    private static final Path REPORTS_FOLDER_PATH = Path.of("src", "test", "resources", "test-data", "static-code-analysis", "reports");
 
     private final ObjectMapper mapper = new ObjectMapper();
 
@@ -60,6 +59,16 @@ class StaticCodeAnalysisParserUnitTest {
     }
 
     @Test
+    void testDartAnalyzeParser() throws IOException {
+        testParserWithFile("dart_analyze.sarif", "dart_analyze.json");
+    }
+
+    @Test
+    void testESLintParser() throws IOException {
+        testParserWithFile("eslint.sarif", "eslint.json");
+    }
+
+    @Test
     void testPMDCPDParser() throws IOException {
         testParserWithFile("cpd.xml", "pmd_cpd.txt");
     }
@@ -77,6 +86,16 @@ class StaticCodeAnalysisParserUnitTest {
     @Test
     void testRuffParser() throws IOException {
         testParserWithFile("ruff.sarif", "ruff.json");
+    }
+
+    @Test
+    void testRubocopParser() throws IOException {
+        testParserWithFile("rubocop.sarif", "rubocop.json");
+    }
+
+    @Test
+    void testClippyParser() throws IOException {
+        testParserWithFile("clippy.sarif", "clippy.json");
     }
 
     @Test
